--- a/public/inspiration.html
+++ b/public/inspiration.html
@@ -206,11 +206,11 @@
 <section class="image-bg bg-dark parallax overlay pt160 pb160 pt-xs-40 pb-xs-40">
     <div class="background-image-holder">
         <img alt="Background Image" class="background-image" 
-            src="assets/img_resize/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben.jpg"
+            src="./assets_build/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben.jpg"
             srcset="
-                assets/img_resize/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben-600w.jpg 600w,
-                assets/img_resize/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben-1200w.jpg 1200w,
-                assets/img_resize/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben-2400w.jpg 2400w"
+                assets_build/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben-600w.jpg 600w,
+                assets_build/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben-1200w.jpg 1200w,
+                assets_build/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben-2400w.jpg 2400w"
             sizes="100vw" />
     </div>
     <div class="container">
@@ -227,7 +227,7 @@
 </section>
 <section class="image-bg bg-dark parallax overlay pt160 pb160 pt-xs-40 pb-xs-40">
     <div class="background-image-holder">
-        <img alt="Background Image" class="background-image" src="assets/img_resize/KL-Visuals-Level2/KL-INSPIRATION-03-Blondierungen-100w.jpg" />
+        <img alt="Background Image" class="background-image" src="assets_build/KL-Visuals-Level2/KL-INSPIRATION-03-Blondierungen-100w.jpg" />
     </div>
     <div class="container">
         <div class="row">
@@ -243,7 +243,7 @@
 </section>
 <section class="image-bg bg-dark parallax overlay pt160 pb160 pt-xs-40 pb-xs-40">
     <div class="background-image-holder">
-        <img alt="Background Image" class="background-image" src="/assets/img_resize/KL-Visuals-Level2/KL-INSPIRATION-05-Entferner.jpg" />
+        <img alt="Background Image" class="background-image" src="./assets_build/KL-Visuals-Level2/KL-INSPIRATION-05-Entferner.jpg" />
     </div>
     <div class="container">
         <div class="row">
@@ -260,7 +260,7 @@
 
 <section class="image-bg bg-dark parallax overlay pt160 pb160 pt-xs-40 pb-xs-40">
     <div class="background-image-holder">
-        <img alt="Background Image" class="background-image" src="/assets/img_resize/KL-Visuals-Level2/KL-INSPIRATION-04-Toenung.jpg" />
+        <img alt="Background Image" class="background-image" src="./assets_build/KL-Visuals-Level2/KL-INSPIRATION-04-Toenung.jpg" />
     </div>
     <div class="container">
         <div class="row">
