gulp-inline-resize working

--- a/public/inspiration.html
+++ b/public/inspiration.html
@@ -204,19 +204,11 @@
 
 
 <section class="image-bg bg-dark parallax overlay pt160 pb160 pt-xs-40 pb-xs-40">
-    <div class="background-image-holder">
-        <img alt="Background Image" class="background-image" 
-            src="./assets_build/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben.jpg"
-            srcset="
-                assets_build/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben-600w.jpg 600w,
-                assets_build/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben-1200w.jpg 1200w,
-                assets_build/KL-Visuals-Level2/KL-INSPIRATION-02-Haarfarben-2400w.jpg 2400w"
-            sizes="100vw" />
-    </div>
+    <div class="background-image-holder INSPIRATION-02-Haarfarben"></div>
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
-                <h2 class="uppercase mb8">Haarfarben</h2>
+                <h2 class="uppercase mb8">Haarfarbe</h2>
                 <p class="lead mb40">A brief description of the tour.</p>
                 <a class="btn btn-lg btn-white mb0" href="detailseite.html">Produkte</a>
             </div>
@@ -226,9 +218,7 @@
     <!--end of container-->
 </section>
 <section class="image-bg bg-dark parallax overlay pt160 pb160 pt-xs-40 pb-xs-40">
-    <div class="background-image-holder">
-        <img alt="Background Image" class="background-image" src="assets_build/KL-Visuals-Level2/KL-INSPIRATION-03-Blondierungen-100w.jpg" />
-    </div>
+    <div class="background-image-holder INSPIRATION-03-Blondierungen"></div>
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
@@ -242,9 +232,7 @@
     <!--end of container-->
 </section>
 <section class="image-bg bg-dark parallax overlay pt160 pb160 pt-xs-40 pb-xs-40">
-    <div class="background-image-holder">
-        <img alt="Background Image" class="background-image" src="./assets_build/KL-Visuals-Level2/KL-INSPIRATION-05-Entferner.jpg" />
-    </div>
+    <div class="background-image-holder INSPIRATION-05-Entferner"></div>
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
@@ -259,9 +247,7 @@
 </section>
 
 <section class="image-bg bg-dark parallax overlay pt160 pb160 pt-xs-40 pb-xs-40">
-    <div class="background-image-holder">
-        <img alt="Background Image" class="background-image" src="./assets_build/KL-Visuals-Level2/KL-INSPIRATION-04-Toenung.jpg" />
-    </div>
+    <div class="background-image-holder INSPIRATION-04-Toenung"></div>
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
