--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>Keralock</title>
+        <title>Keralock </title>
+        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="index,follow">
 
         <link rel="stylesheet" href="/main.css">
-
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'>
-
-
+		
+		<script src="/assets/js/respimage.min.js" async=""></script>
+		<script src="/assets/js/lazysizes.min.js" async=""></script>
         <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script>
+        	(function(h){h.className = h.className.replace('no-js', '')})(document.documentElement)
+        </script>
     </head>
-    <body class="temp page_home">
+    <body class="page_home">
 	
 		
 
@@ -33,35 +38,37 @@
 
     <div class="bg-container">
     	<div class="bg-item overlay bg-item-inspiration">
-    		<img src="assets_build/home/KL-Keyvisual-INSPIRATION-3000px.jpg" 
-    			srcset="assets_build/home/KL-Keyvisual-INSPIRATION-3000px-600w.jpg 600w" 
-    			sizes="100vw" alt="" class="bg1">
-    		<img src="assets_build/home/KL-Keyvisual-INSPIRATION-3000px.png" 
+    		<img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" 
+    			srcset="assets_build/home/KL-Keyvisual-INSPIRATION-600w.jpg 600w" 
+    			sizes="100vw" alt="" 
+    			class="bg1">
+    		<img src="assets_build/home/KL-Keyvisual-INSPIRATION.png" 
     			srcset="" 
-    			sizes="100vw" alt="" class="bg2">
+    			sizes="100vw" alt="" 
+    			class="bg2">
     	</div>
     	<div class="bg-item overlay bg-item-deluxe">
-    		<img src="assets_build/home/KL-Keyvisual-DELUXE-3000px.jpg" 
+    		<img src="assets_build/home/KL-Keyvisual-DELUXE.jpg" 
     			srcset="" 
     			sizes="100vw" alt="" class="bg1">
-    		<img src="assets_build/home/KL-Keyvisual-DELUXE-3000px.png" 
+    		<img src="assets_build/home/KL-Keyvisual-DELUXE.png" 
     			srcset="" 
     			sizes="100vw" alt="" class="bg2">
     	</div>
     	<div class="bg-item overlay bg-item-nightlife">
-    		<img src="assets_build/home/KL-Keyvisual-NIGHT-3000px.jpg" 
+    		<img src="assets_build/home/KL-Keyvisual-NIGHT.jpg" 
     			srcset="" 
     			sizes="100vw" alt="" class="bg1">
-    		<img src="assets_build/home/KL-Keyvisual-NIGHT-3000px.png" 
+    		<img src="assets_build/home/KL-Keyvisual-NIGHT.png" 
     			srcset="" 
     			sizes="100vw" alt="" class="bg2">
 
     	</div>
     	<div class="bg-item overlay bg-item-care">
-    		<img src="assets_build/home/KL-Keyvisual-CARE-3000px.jpg" 
+    		<img src="assets_build/home/KL-Keyvisual-CARE.jpg" 
     			srcset="" 
     			sizes="100vw" alt="" class="bg1">
-    		<img src="assets_build/home/KL-Keyvisual-CARE-3000px.png" 
+    		<img src="assets_build/home/KL-Keyvisual-CARE.png" 
     			srcset="" 
     			sizes="100vw" alt="" class="bg2">
     	</div>
@@ -265,6 +272,6 @@
 		
 
 	    
-	    <script src="js/main.js"></script>
+	    <script src="/js/main.js"></script>
     </body>
 </html>	
