--- a/public/detailseite.html
+++ b/public/detailseite.html
@@ -63,27 +63,27 @@
                 <div class="module left">
                     <ul class="menu bg-light">
                         <li class="has-dropdown bg-light">
-                            <a href="inspiration.html" >
+                            <a href="/inspiration.html" >
                                 Inspiration
                             </a>
                             <ul>
                                 <li>
-                                    <a href="detailseite.html">
+                                    <a href="/inspiration/Haarfarben.html">
                                         Haarfarben
                                     </a>
 
                                 </li>
                                 <li>
-                                    <a href="detailseite.html">
+                                    <a href="/inspiration/Blondierungen.html">
                                         Blondierungen
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="detailseite.html">
+                                    <a href="/inspiration/Blondierungen.html">
                                         Haarfarb-Entferner
                                     </a>
                                 <li>
-                                    <a href="detailseite.html">
+                                    <a href="/inspiration/Blondierungen.html">
                                         Tönungsshampoos
                                     </a>
                                 </li>
@@ -470,6 +470,6 @@
 		
 
 	    
-	    <script src="js/main.js"></script>
+	    <script src="/js/main.js"></script>
     </body>
 </html>	
